<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MapActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/search"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_style"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/search"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busca_aqui"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/background_style"
        android:overlapAnchor="false"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toRightOf="@+id/search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/drop_down"
            app:layout_constraintRight_toRightOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/search"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            tools:ignore="ContentDescription" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <ImageButton
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#0000"
        android:contentDescription="@string/options"
        android:src="@drawable/menu"
        app:layout_constraintRight_toLeftOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/search"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintRight_toRightOf="@id/spinner"
        app:layout_constraintLeft_toLeftOf="@id/spinner"
        android:text="@string/colectivos"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="bottom|center"/>

    <ImageButton
        android:id="@+id/remove"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/cruz"
        app:layout_constraintTop_toTopOf="@id/search"
        app:layout_constraintBottom_toBottomOf="@id/search"
        android:layout_marginStart="2dp"
        android:backgroundTint="@color/white"
        app:tint="@color/black"
        tools:ignore="ContentDescription"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/search"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/indications"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:background="@color/purple_700"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/indications"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicaciones"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/seguimiento"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        tools:text="BAJE DEL COLECTIVO"
        android:textStyle="bold"
        android:background="@color/green"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible" />

    <TextView
        android:id="@+id/predict"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/cuando_llega"
        android:textStyle="bold"
        android:background="@color/purple_700"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>