<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".PredictActivity">

    <Spinner
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:background="@drawable/background_style"
        android:overlapAnchor="false"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/location_pin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/location_pin"
        app:tint="@color/red"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/spinner_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/spinner_hint"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/location_pin"
        app:layout_constraintTop_toTopOf="@id/spinner"
        app:layout_constraintBottom_toBottomOf="@id/spinner"
        android:textSize="20sp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/drop_down"
        app:layout_constraintRight_toRightOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/calcular"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/calcular_tiempo"
        android:textStyle="bold"
        android:background="@color/green"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/spinner"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:layout_margin="5dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcular" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#0000"
        tools:ignore="ContentDescription"
        android:src="@drawable/back"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/purple_500">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/tiempo_estimado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempo_estimado"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="50dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/tiempo_estimado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/predict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="232 mins"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>